Fixed bad closing tag

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header"><a href="/">{{ site.sitename }}<a></h1>
+        <h1 class="header"><a href="/">{{ site.sitename }}</a></h1>
         <p class="header">{{ site.sitedescription }}</p>
 
         <nav id="navigation">
