--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,8 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
+    <meta name="google-site-verification" content="WxZdzPANRFpehqogDMcTc9HLGXXDJy5If07MuUZvHho" />
   </head>
   <body>
     <div class="wrapper">
