--- a/assets/styles/bootstrap/css/responsive.css
+++ b/assets/styles/bootstrap/css/responsive.css
@@ -1,4 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Droid+Sans+Mono);
+
+@import url(http://fonts.googleapis.com/css?family=Droid+Sans);
 /*!
  * Bootstrap Responsive v2.3.1
  *
