--- a/assets/styles/bootstrap/less/variables.less
+++ b/assets/styles/bootstrap/less/variables.less
@@ -46,10 +46,12 @@
 // -------------------------
 @sansFontFamily:  TitleFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
 @serifFontFamily: Georgia, "Times New Roman", Times, serif;
-@monoFontFamily:  Monaco, Menlo, Consolas, "Courier New", monospace;
+@import url(http://fonts.googleapis.com/css?family=Droid+Sans+Mono);
+@monoFontFamily:  Droid Sans Mono, Monaco, Menlo, Consolas, "Courier New", monospace;
 
 @baseFontSize:  16px;
-@baseFontFamily:  Droid Sans Mono;  @import url(http://fonts.googleapis.com/css?family=Droid+Sans+Mono);
+@import url(http://fonts.googleapis.com/css?family=Droid+Sans);
+@baseFontFamily:  Droid Sans;
 @baseLineHeight:  22px;
 @altFontFamily: @serifFontFamily;
 
