--- a/assets/styles/bootstrap/less/variables.less
+++ b/assets/styles/bootstrap/less/variables.less
@@ -44,15 +44,15 @@
 
 // Typography
 // -------------------------
+@import url(http://fonts.googleapis.com/css?family=PT+Mono|Sintony:400,700);
+
 @sansFontFamily:  TitleFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
-@serifFontFamily: Georgia, "Times New Roman", Times, serif;
-@import url(http://fonts.googleapis.com/css?family=Droid+Sans+Mono);
-@monoFontFamily:  Droid Sans Mono, Monaco, Menlo, Consolas, "Courier New", monospace;
+@serifFontFamily: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+@monoFontFamily:  "PT Mono", Monaco, Menlo, Consolas, monospace;
 
 @baseFontSize:  16px;
-@import url(http://fonts.googleapis.com/css?family=Droid+Sans);
-@baseFontFamily:  Droid Sans;
-@baseLineHeight:  22px;
+@baseFontFamily:  Sintony, Verdana, Geneva, sans-serif;
+@baseLineHeight:  @baseFontSize * 1.4;
 @altFontFamily: @serifFontFamily;
 
 @headingsFontFamily:  inherit;
