--- a/assets/styles/bootstrap/less/variables.less
+++ b/assets/styles/bootstrap/less/variables.less
@@ -44,14 +44,14 @@
 
 // Typography
 // -------------------------
-@import url(http://fonts.googleapis.com/css?family=PT+Mono|Sintony:400,700);
+@import url(http://fonts.googleapis.com/css?family=PT+Mono|Roboto:300,700,300italic,700italic);
 
 @sansFontFamily:  TitleFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
 @serifFontFamily: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 @monoFontFamily:  "PT Mono", Monaco, Menlo, Consolas, monospace;
 
 @baseFontSize:  16px;
-@baseFontFamily:  Sintony, Verdana, Geneva, sans-serif;
+@baseFontFamily:  Roboto, Verdana, Geneva, sans-serif;
 @baseLineHeight:  @baseFontSize * 1.4;
 @altFontFamily: @serifFontFamily;
 
