--- a/assets/styles/bootstrap/less/variables.less
+++ b/assets/styles/bootstrap/less/variables.less
@@ -44,7 +44,7 @@
 
 // Typography
 // -------------------------
-@import url(http://fonts.googleapis.com/css?family=Roboto:300,700,300italic,700italic);
+@import url(http://fonts.googleapis.com/css?family=Roboto:300,500,300italic,500italic);
 
 @sansFontFamily:  "Helvetica Neue", Helvetica, Arial, sans-serif;
 @serifFontFamily: "Palatino Linotype", "Book Antiqua", Palatino, serif;
@@ -56,7 +56,7 @@
 @altFontFamily: @serifFontFamily;
 
 @headingsFontFamily:  TitleFont, @serifFontFamily;
-@headingsFontWeight:  bold;
+@headingsFontWeight:  500;
 @headingsColor: rgb(107, 197, 179);
 
 
