--- a/assets/styles/less/main.less
+++ b/assets/styles/less/main.less
@@ -19,6 +19,7 @@
 body {
   background-image: url('../img/background.png');
   background-repeat: repeat;
+  font-weight: 300;
 }
 
 /* Set a max-width for horizontal fluid layout and make it centered */
@@ -36,6 +37,10 @@ body {
 
 footer {
   margin: 3em 1em 1em 1em;
+}
+
+strong, b {
+  font-weight: 500;
 }
 
 h1 { font-size: @baseFontSize * 2.25; } // ~36px
