--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
 
   <script src="/assets/js/vendor/bootstrap.min.js"></script>
+  <script src="/assets/js/socialshareprivacy/jquery.socialshareprivacy.min.js"></script>
 
   <script src="/assets/js/plugins.js"></script>
   <script src="/assets/js/utils.js"></script>
