--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,6 +37,11 @@ layout: none
     </div>
 
     <div class="row-fluid">
+      <div class="span12 share-panel">
+      </div>
+    </div>
+
+    <div class="row-fluid">
       <div class="span12 comments">
         {% include comments.html %}
       </div>
