Tweaked font styles a little bit

--- a/assets/styles/bootstrap/less/type.less
+++ b/assets/styles/bootstrap/less/type.less
@@ -196,7 +196,7 @@ blockquote {
   p {
     margin-bottom: 0;
     font-size: @baseFontSize * 1.25;
-    font-weight: 300;
+    font-weight: @blockquoteFontWeight;
     line-height: 1.25;
   }
   small {
