--- a/assets/styles/bootstrap/css/bootstrap.css
+++ b/assets/styles/bootstrap/css/bootstrap.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:300,300italic,500,500italic);
+@import url(http://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,500,500italic);
 /*!
  * Bootstrap v2.3.1
  *
@@ -8,6 +8,13 @@
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
+@font-face {
+  font-family: 'TitleFont';
+  src: url('/assets/font/BPdotsSquareBold-webfont.eot');
+  src: url('/assets/font/BPdotsSquareBold-webfont.eot?#iefix') format('embedded-opentype'), url('/assets/font/BPdotsSquareBold-webfont.woff') format('woff'), url('/assets/font/BPdotsSquareBold-webfont.ttf') format('truetype'), url('/assets/font/BPdotsSquareBold-webfont.svg#BPdotsSquareBold') format('svg');
+  font-weight: bold;
+  font-style: normal;
+}
 .clearfix {
   *zoom: 1;
 }
@@ -768,7 +775,7 @@ blockquote {
 blockquote p {
   margin-bottom: 0;
   font-size: 20px;
-  font-weight: 300;
+  font-weight: 100;
   line-height: 1.25;
 }
 blockquote small {
