--- a/assets/styles/bootstrap/less/variables.less
+++ b/assets/styles/bootstrap/less/variables.less
@@ -213,13 +213,13 @@
 @navbarBrandColor:  lighten(@navbarLinkColor, 40%);
 
 // Inverted navbar
-@navbarInverseBackground: #111111;
-@navbarInverseBackgroundHighlight:  #222222;
+@navbarInverseBackground: #00705E;
+@navbarInverseBackgroundHighlight:  #00A287;
 @navbarInverseBorder: #252525;
 
 @navbarInverseText: @grayLight;
-@navbarInverseLinkColor:  @grayLight;
-@navbarInverseLinkColorHover: @white;
+@navbarInverseLinkColor:  #FFAD76;
+@navbarInverseLinkColorHover: #FF6700;
 @navbarInverseLinkColorActive:  @navbarInverseLinkColorHover;
 @navbarInverseLinkBackgroundHover:  transparent;
 @navbarInverseLinkBackgroundActive: @navbarInverseBackground;
