--- a/assets/styles/less/main.less
+++ b/assets/styles/less/main.less
@@ -24,6 +24,10 @@ body {
   vertical-align: text-top;
 }
 
+.navbar .nav {
+  font-weight: @boldFontWeight;
+}
+
 footer {
   margin: 3em 1em 1em 1em;
 }
