--- a/assets/styles/bootstrap/css/responsive.css
+++ b/assets/styles/bootstrap/css/responsive.css
@@ -1011,13 +1011,13 @@
   }
   .navbar-inverse .nav-collapse .nav > li > a,
   .navbar-inverse .nav-collapse .dropdown-menu a {
-    color: #999999;
+    color: #ffad76;
   }
   .navbar-inverse .nav-collapse .nav > li > a:hover,
   .navbar-inverse .nav-collapse .nav > li > a:focus,
   .navbar-inverse .nav-collapse .dropdown-menu a:hover,
   .navbar-inverse .nav-collapse .dropdown-menu a:focus {
-    background-color: #111111;
+    background-color: #00705e;
   }
   .nav-collapse.in .btn-group {
     margin-top: 5px;
@@ -1068,8 +1068,8 @@
   }
   .navbar-inverse .nav-collapse .navbar-form,
   .navbar-inverse .nav-collapse .navbar-search {
-    border-top-color: #111111;
-    border-bottom-color: #111111;
+    border-top-color: #00705e;
+    border-bottom-color: #00705e;
   }
   .navbar .nav-collapse .nav.pull-right {
     float: none;
