--- a/assets/styles/bootstrap/less/variables.less
+++ b/assets/styles/bootstrap/less/variables.less
@@ -199,12 +199,12 @@
 @navbarCollapseDesktopWidth:  @navbarCollapseWidth + 1;
 
 @navbarHeight:  40px;
-@navbarBackgroundHighlight: #00A287;
+@navbarBackgroundHighlight: #C0D5D1;
 @navbarBackground:  darken(@navbarBackgroundHighlight, 10%);
 @navbarBorder:  darken(@navbarBackground, 12%);
 
 @navbarText:  darken(@navbarBackgroundHighlight, 70%);
-@navbarLinkColor: #FF6700;
+@navbarLinkColor: #BE4C00;
 @navbarLinkColorHover:  lighten(@navbarLinkColor, 35%);
 @navbarLinkColorActive: @gray;
 @navbarLinkBackgroundHover: transparent;
