--- a/assets/styles/bootstrap/css/bootstrap.css
+++ b/assets/styles/bootstrap/css/bootstrap.css
@@ -3706,15 +3706,15 @@ input[type="submit"].btn.btn-mini {
   min-height: 40px;
   padding-left: 20px;
   padding-right: 20px;
-  background-color: #008e76;
-  background-image: -moz-linear-gradient(top, #00a287, #006f5d);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#00a287), to(#006f5d));
-  background-image: -webkit-linear-gradient(top, #00a287, #006f5d);
-  background-image: -o-linear-gradient(top, #00a287, #006f5d);
-  background-image: linear-gradient(to bottom, #00a287, #006f5d);
+  background-color: #b4cdc8;
+  background-image: -moz-linear-gradient(top, #c0d5d1, #a1c1bb);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#c0d5d1), to(#a1c1bb));
+  background-image: -webkit-linear-gradient(top, #c0d5d1, #a1c1bb);
+  background-image: -o-linear-gradient(top, #c0d5d1, #a1c1bb);
+  background-image: linear-gradient(to bottom, #c0d5d1, #a1c1bb);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff00a287', endColorstr='#ff006f5d', GradientType=0);
-  border: 1px solid #00322a;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffc0d5d1', endColorstr='#ffa1c1bb', GradientType=0);
+  border: 1px solid #7da8a0;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -3746,8 +3746,8 @@ input[type="submit"].btn.btn-mini {
   margin-left: -20px;
   font-size: 20px;
   font-weight: 200;
-  color: #ffe1cc;
-  text-shadow: 0 1px 0 #00a287;
+  color: #ffb98b;
+  text-shadow: 0 1px 0 #c0d5d1;
 }
 .navbar .brand:hover,
 .navbar .brand:focus {
@@ -3756,20 +3756,20 @@ input[type="submit"].btn.btn-mini {
 .navbar-text {
   margin-bottom: 0;
   line-height: 40px;
-  color: #000000;
+  color: #131d1b;
 }
 .navbar-link {
-  color: #ff6700;
+  color: #be4c00;
 }
 .navbar-link:hover,
 .navbar-link:focus {
-  color: #ffd1b3;
+  color: #ffaa72;
 }
 .navbar .divider-vertical {
   height: 40px;
   margin: 0 9px;
-  border-left: 1px solid #006f5d;
-  border-right: 1px solid #00a287;
+  border-left: 1px solid #a1c1bb;
+  border-right: 1px solid #c0d5d1;
 }
 .navbar .btn,
 .navbar .btn-group {
@@ -3909,9 +3909,9 @@ input[type="submit"].btn.btn-mini {
 .navbar .nav > li > a {
   float: none;
   padding: 8.8px 15px 8.8px;
-  color: #ff6700;
+  color: #be4c00;
   text-decoration: none;
-  text-shadow: 0 1px 0 #00a287;
+  text-shadow: 0 1px 0 #c0d5d1;
 }
 .navbar .nav .dropdown-toggle .caret {
   margin-top: 8px;
@@ -3919,7 +3919,7 @@ input[type="submit"].btn.btn-mini {
 .navbar .nav > li > a:focus,
 .navbar .nav > li > a:hover {
   background-color: transparent;
-  color: #ffd1b3;
+  color: #ffaa72;
   text-decoration: none;
 }
 .navbar .nav > .active > a,
@@ -3927,7 +3927,7 @@ input[type="submit"].btn.btn-mini {
 .navbar .nav > .active > a:focus {
   color: #555555;
   text-decoration: none;
-  background-color: #ffb380;
+  background-color: #ff8c3f;
   -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
   -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
   box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
@@ -3940,17 +3940,17 @@ input[type="submit"].btn.btn-mini {
   margin-right: 5px;
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  background-color: #007461;
-  background-image: -moz-linear-gradient(top, #008972, #005547);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#008972), to(#005547));
-  background-image: -webkit-linear-gradient(top, #008972, #005547);
-  background-image: -o-linear-gradient(top, #008972, #005547);
-  background-image: linear-gradient(to bottom, #008972, #005547);
+  background-color: #a4c3bd;
+  background-image: -moz-linear-gradient(top, #b1cbc6, #92b6af);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#b1cbc6), to(#92b6af));
+  background-image: -webkit-linear-gradient(top, #b1cbc6, #92b6af);
+  background-image: -o-linear-gradient(top, #b1cbc6, #92b6af);
+  background-image: linear-gradient(to bottom, #b1cbc6, #92b6af);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff008972', endColorstr='#ff005547', GradientType=0);
-  border-color: #005547 #005547 #000907;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffb1cbc6', endColorstr='#ff92b6af', GradientType=0);
+  border-color: #92b6af #92b6af #65978e;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  *background-color: #005547;
+  *background-color: #92b6af;
   /* Darken IE7 buttons by default so they stand out more given they won't have borders */
 
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
@@ -3965,12 +3965,12 @@ input[type="submit"].btn.btn-mini {
 .navbar .btn-navbar.disabled,
 .navbar .btn-navbar[disabled] {
   color: #ffffff;
-  background-color: #005547;
-  *background-color: #003c32;
+  background-color: #92b6af;
+  *background-color: #83aca4;
 }
 .navbar .btn-navbar:active,
 .navbar .btn-navbar.active {
-  background-color: #00221d \9;
+  background-color: #73a299 \9;
 }
 .navbar .btn-navbar .icon-bar {
   display: block;
@@ -4023,18 +4023,18 @@ input[type="submit"].btn.btn-mini {
 }
 .navbar .nav li.dropdown > a:hover .caret,
 .navbar .nav li.dropdown > a:focus .caret {
-  border-top-color: #ffd1b3;
-  border-bottom-color: #ffd1b3;
+  border-top-color: #ffaa72;
+  border-bottom-color: #ffaa72;
 }
 .navbar .nav li.dropdown.open > .dropdown-toggle,
 .navbar .nav li.dropdown.active > .dropdown-toggle,
 .navbar .nav li.dropdown.open.active > .dropdown-toggle {
-  background-color: #ffb380;
+  background-color: #ff8c3f;
   color: #555555;
 }
 .navbar .nav li.dropdown > .dropdown-toggle .caret {
-  border-top-color: #ff6700;
-  border-bottom-color: #ff6700;
+  border-top-color: #be4c00;
+  border-bottom-color: #be4c00;
 }
 .navbar .nav li.dropdown.open > .dropdown-toggle .caret,
 .navbar .nav li.dropdown.active > .dropdown-toggle .caret,
